fix candidatos con porcentajes

--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -13,8 +13,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -43,9 +43,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -63,8 +63,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -93,9 +93,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -113,8 +113,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -143,9 +143,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -163,8 +163,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -193,9 +193,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -213,8 +213,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -243,9 +243,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -263,8 +263,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -293,9 +293,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -313,8 +313,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -326,8 +326,8 @@
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -356,9 +356,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -402,8 +402,8 @@
                     <h5>Nombre Apellido</h5>
                     <p class="pueblo-origen">Pueblo Originario</p>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -435,9 +435,9 @@
 
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
@@ -457,8 +457,8 @@
                     <h5>Nombre Apellido</h5>
                     <p class="pueblo-origen">Pueblo Originario</p>
                     <div class="compromisos-adheridos">
-                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
-                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
+                        <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+                        <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
                     </div>
                 </div>
 
@@ -486,9 +486,9 @@
                                 </ul>
                                 <div class="rrss-candidato">
                                     <ul class="redes-sociales">
-                                        <li><a href="#"><img src="../static/imagenes/twitter-icono-rosa.svg" alt="icono twitter"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/fb-icono-rosa.svg" alt="icono facebook"></a></li>
-                                        <li><a href="#"><img src="../static/imagenes/insta-icono-rosa.svg" alt="icono instagram"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/twitter-icono-rosa.svg' %}" alt="icono twitter"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/fb-icono-rosa.svg' %}" alt="icono facebook"></a></li>
+                                        <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                                     </ul>
                                 </div>
                                 <div class="sitioweb">
