--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -25,9 +25,9 @@
 
 <div class="container-fluid busqueda-comuna">
     <div class="row form-contenidos">
-        <div class="col-12 col-sm-12 col-md-6 offset-md-3 col-lg-5 offset-lg-3 col-xl-4 offset-xl-3 form-comunas">
+        <!-- <div class="col-12 col-sm-12 col-md-6 offset-md-3 col-lg-5 offset-lg-3 col-xl-4 offset-xl-3 form-comunas">
             <h1>Participamos <span>Todxs</span></h1>
-            <p class="bajada-titulo">Por un proceso constituyente donde todas las voces participen.</p>
+            <p class="bajada-titulo">Por un proceso constituyente donde todas las voces participen.</p> -->
 
       <div class="col-9 offset-3 col-sm-9 offset-sm-3 col-md-10 offset-md-2 col-lg-5 offset-lg-3 col-xl-4 offset-xl-3 form-comunas">
           <h1>Participamos <span>Todxs</span></h1>
