--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -4,7 +4,7 @@
         <div class="row alinear">
 
             <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 logo">
-                <img src="../../static/imagenes/logo-antp.png" alt="personas" class="pueblo-originario">
+                <img src="{% static 'imagenes/logo-antp.png' %}" alt="personas" class="pueblo-originario">
             </div>
 
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -53,19 +53,19 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 alinear">
-                <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img src="../../static/imagenes/logo-softwarelibre.png" alt="iconos software libre"></a>
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img src="{% static 'imagenes/logo-softwarelibre.png' %}" alt="iconos software libre"></a>
                 <p>Web creada con <a href="#" class="enlace">software libre</a>.</p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 fci-creditos">
                 <p>Desarrollado por</p>
-                <a href="https://ciudadaniai.org/" target="_blank"><img src="../../static/imagenes/logo-fci.svg" alt="logo fci"></a>
+                <a href="https://ciudadaniai.org/" target="_blank"><img src="{% static 'imagenes/logo-fci.svg' %}" alt="logo fci"></a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <p>Con el soporte de</p>
-                <a href="https://www.alabs.org/" target="_blank"><img src="../../static/imagenes/alabs-logo.svg" alt="logo alabs"></a>
+                <a href="https://www.alabs.org/" target="_blank"><img src="{% static 'imagenes/alabs-logo.svg' %}" alt="logo alabs"></a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <a href="https://decidim.org/" target="_blank"> <img src="../../static/imagenes/decidim-logo.svg" alt="logo decidim"></a>
+                <a href="https://decidim.org/" target="_blank"> <img src="{% static 'imagenes/decidim-logo.svg' %}" alt="logo decidim"></a>
             </div>
         </div>
     </div>
