--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -378,7 +378,7 @@
                         <li class="page-item"><a class="page-link" href="#">3</a></li>
                     </ul>
                 </nav>
-            </div-->
+            </div>
 
         </div>
     </div>
@@ -504,7 +504,7 @@
             {% endfor %}
 
         </div>
-        {% endfor %}
+      
 
     </div>
 </section>
