--- a/mn_juego/templates/componentes/buscador_comunas.html
+++ b/mn_juego/templates/componentes/buscador_comunas.html
@@ -1,18 +1,18 @@
-<input type="text" id="myAutocomplete" class="form-control" />
+<input type="text" id="{{input_id}}" class="form-control" />
 
 <script>
-        var src = {
+        var src_{{input_id}} = {
       {% for comuna in object_list %}"{{comuna.name}}": "{{comuna.slug}}",{% endfor %}
     }
 
     function onSelectItem(item) {
 
       let slug = item.value;
-      $(location).attr('href', 'comuna/'+slug)
+      $(location).attr('href', 'comuna/'+slug + "{{post_fix}}")
     }
     $( document ).ready(function() {
-        $('#myAutocomplete').autocomplete({
-          source: src,
+        $('#{{input_id}}').autocomplete({
+          source: src_{{input_id}},
           onSelectItem: onSelectItem,
           highlightClass: 'text-danger',
           treshold: 2,
