--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -8,7 +8,10 @@
             </div>
 
             {% for candidatura in distrito.candidates.all %}
-            {% include 'componentes/candidato_card.html' with candidatura=candidatura %}
+                {% se_ha_comprometido candidatura as se_ha_comprometido_al_menos_con_una %}
+                {% if se_ha_comprometido_al_menos_con_una %}
+                {% include 'componentes/candidato_card.html' with candidatura=candidatura %}
+                {% endif %}
             {% endfor %}
 
 
