--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -36,8 +36,8 @@
           <p>Encuentra las <b>candidaturas comprometidas</b> por una participación ciudadana inclusiva.</p>
 
           <div id="parent" class="form-group">
-               <label for="myAutocomplete">Selecciona <b>la comuna</b> en que votas:</label>
-               <!--img src="{% static 'imagenes/map-icono.svg" alt="mapa-icono' %}" class="icono-mapa"-->
+               <label for="myAutocomplete">Escribe <b>la comuna</b> en que votas:</label>
+               img src="{% static 'imagenes/map-icono.svg' %}" alt="mapa-icono" class="icono-mapa">
               {% include 'componentes/buscador_comunas.html' with object_list=object_list input_id='myAutocomplete' post_fix="" %}
 
                 <!--a class="boton-antp" type="submit">Revisar Comuna</a-->
