--- a/mn_juego/templates/componentes/candidato_card.html
+++ b/mn_juego/templates/componentes/candidato_card.html
@@ -14,7 +14,7 @@
             {% endif %}
             {% get_compromiso_gep candidatura as compromiso_gep %}
             {% if compromiso_gep %}
-            <p class="blue">Compromiso GEP</p>
+            <p class="blue">Compromiso por la Inclusión</p>
             {% endif %}
         </div>
     </div>
