fix texto mapa buscador

--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -37,7 +37,7 @@
 
           <div id="parent" class="form-group">
                <label for="myAutocomplete">Escribe <b>la comuna</b> en que votas:</label>
-               img src="{% static 'imagenes/map-icono.svg' %}" alt="mapa-icono" class="icono-mapa">
+               <img src="{% static 'imagenes/map-icono.svg' %}" alt="mapa-icono" class="icono-mapa">
               {% include 'componentes/buscador_comunas.html' with object_list=object_list input_id='myAutocomplete' post_fix="" %}
 
                 <!--a class="boton-antp" type="submit">Revisar Comuna</a-->
