--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <h2>Candidatos de tu Distrito</h2>
+                <h2>Candidaturas que han adherido en tu Distrito</h2>
             </div>
 
             {% for candidatura in distrito.candidates.all %}
