fix links compromisos

--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -5,6 +5,7 @@
         <div class="row justify-content-md-center">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <h2>Candidaturas que han adherido en tu Distrito</h2>
+                <!--<h3>Si eres candidato/a a la Convención Constitucional, te invitamos a sumarte #ParticipamosTodxs y firmar nuestros compromisos <a href="https://ahoranostocaparticipar.cl/processes/espaciocompromisos">Conoce los Compromisos</a></h3>-->
             </div>
 
             {% for candidatura in distrito.candidates.all %}
