--- a/mn_juego/templates/componentes/candidato_card.html
+++ b/mn_juego/templates/componentes/candidato_card.html
@@ -10,11 +10,15 @@
         <div class="compromisos-adheridos">
             {% get_compromiso_participacion candidatura as compromiso_participacion %}
             {% if compromiso_participacion %}
-            <p class="pink">Compromiso por la participación</p>
+            <p class="pink">
+              <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+            </p>
             {% endif %}
             {% get_compromiso_gep candidatura as compromiso_gep %}
             {% if compromiso_gep %}
-            <p class="blue">Compromiso por la Inclusión</p>
+            <p class="blue">
+              <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
+            </p>
             {% endif %}
         </div>
     </div>
