borra sitio web candidato

--- a/mn_juego/templates/componentes/candidato_card.html
+++ b/mn_juego/templates/componentes/candidato_card.html
@@ -54,9 +54,9 @@
                             <li><a href="#"><img src="{% static 'imagenes/insta-icono-rosa.svg' %}" alt="icono instagram"></a></li>
                         </ul>
                     </div>
-                    <div class="sitioweb">
+                    <!--<div class="sitioweb">
                         <a href="#" class="boton-antp" type="submit">Sitio Web Candidato</a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
