fix buscador header

--- a/mn_juego/templates/componentes/buscador_comunas.html
+++ b/mn_juego/templates/componentes/buscador_comunas.html
@@ -1,4 +1,4 @@
-<input type="text" id="{{input_id}}" class="form-control" />
+<input type="text" id="{{input_id}}" class="form-control" placeholder="Escribe tu comuna"/>
 <!--a class="boton-antp" type="submit" onclick="onClick_{{input_id}}">Revisar</a-->
 <script>
         var src_{{input_id}} = {
