no hay candidaturas adheridas, invítalas a que lo hagan a través de tus redes sociales

--- a/mn_juego/templates/componentes/header.html
+++ b/mn_juego/templates/componentes/header.html
@@ -9,7 +9,7 @@
             <a class="navbar-brand" href="/"><img src="{% static 'imagenes/logo-antp.png' %}" alt="My image"></a>
             <ul class="navbar-nav">
               <div id="parent" class="form-group">
-                  {% include 'componentes/buscador_comunas.html' with object_list=object_list input_id='myAutocomplete' pre_fix="comuna" %}
+                  {% include 'componentes/buscador_comunas.html' with object_list=object_list input_id='header_comunas' pre_fix="comuna" %}
               </div>
                 <li class="nav-item">
                     <a class="nav-link" href="https://ahoranostocaparticipar.cl/users/sign_up">Registrate</a>
