--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -15,6 +15,11 @@
                 {% endif %}
             {% endfor %}
 
+            {% esta_vacio_de_compromisos distrito as esta_vacio %}
+            {% if esta_vacio %}
+                <h3>No hay candidaturas adheridas, invítalas a que lo hagan a través de tus redes sociales</h3>
+            {% endif %}
+
 
 
 
